--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     // OkHttp as recommended by the course for easy HTTP
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.squareup.okhttp:okhttp:2.7.5'
 }
