--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
 
         <!-- Entry point activity -->
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.movies.MoviesActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name">
             <intent-filter>
@@ -47,10 +47,10 @@
         <activity
             android:name=".ui.detail.MovieDetailActivity"
             android:label="@string/title_activity_movie_detail"
-            android:parentActivityName=".ui.MainActivity">
+            android:parentActivityName=".ui.movies.MoviesActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.MainActivity" />
+                android:value=".ui.movies.MoviesActivity" />
         </activity>
     </application>
 
