--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,8 +61,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
-    androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
 
     // Android support libraries
     compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
@@ -110,11 +108,15 @@ dependencies {
 
     // Dagger2
     compile "com.google.dagger:dagger:$DAGGER_VERSION"
-    provided 'org.glassfish:javax.annotation:10.0-b28' //Required by Dagger2
+    //Required by Dagger2
     annotationProcessor "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
 
     // Leak cannary
     debugCompile "com.squareup.leakcanary:leakcanary-android:$LEAK_CANNARY_VERSION"
     releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$LEAK_CANNARY_VERSION"
     testCompile "com.squareup.leakcanary:leakcanary-android-no-op:$LEAK_CANNARY_VERSION"
+    compile 'com.android.support:support-v4:25.3.0'
+    testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
 }
