--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     final PICASSO_VERSION = '2.5.2'
     final RETROFIT_VERSION = '2.2.0'
     final RX_ANDROID = '2.0.1'
-    final SUPPORT_LIBRARY_VERSION = '25.3.0'
+    final SUPPORT_LIBRARY_VERSION = '25.3.1'
     final TIMBER_VERSION = '4.1.2'
     final TRELLO_VERSION = '2.0.1'
     final LEAK_CANNARY_VERSION = '1.5'
@@ -66,6 +66,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support.constraint:constraint-layout:$CONSTRAINT_LAYOUT_VERSION"
 
     //Material Support Design
