--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@
 
 apply plugin: 'com.android.application'
 
+repositories {
+    maven {url "https://clojars.org/repo/"}
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -119,6 +123,11 @@ dependencies {
     releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$LEAK_CANNARY_VERSION"
     testCompile "com.squareup.leakcanary:leakcanary-android-no-op:$LEAK_CANNARY_VERSION"
 
+    // Icepick
+    compile 'frankiesardo:icepick:3.2.0'
+    provided 'frankiesardo:icepick-processor:3.2.0'
+
+    compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
     provided 'org.glassfish:javax.annotation:10.0-b28'
