--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
+        maven {url "https://clojars.org/repo/"}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.1'
